syntax = "proto3";

package edu.uci.ics.amber.engine.common;

import "edu/uci/ics/amber/engine/common/virtualidentity.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
    scope: FILE,
    preserve_unknown_fields: false
    no_default_values_in_constructor: true
};

message PythonDataHeader {
    common.ActorVirtualIdentity tag = 1 [(scalapb.field).no_box = true];
    string payload_type = 2;
}

